# CSAO-Reccomendation-System

./: .gitignore  Dockerfile  README.md  demo_log.txt  demo_stdout.txt  eval_log.txt  full_eval_output.txt  pyproject.toml  requirements-serving.txt  serve_log.txt  train_log.txt
candidate_generation/: __init__.py  candidate_generator.py
common/: __init__.py  config.py  feature_names.py  io.py  reproducibility.py
configs/: base.yaml  ranking.yaml  serving.yaml
csao_reco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: __init__.py  loaders.py  preprocessing.py  schemas.py  unify.py
docs/: ab_testing_plan.md  architecture_diagram.md  business_impact_validation.md  cold_start_strategy.md  data_realism_defense.md  final_rubric_report.md  judge_risk_checklist.md  latency_analysis.md  pairing_failure_analysis.md  system_design.md  zomato_realism_audit.md
evaluation/: business_impact_model.py  error_analysis.py  fairness_analysis.py  run_eval.py
experiments/: README.md  ab_test_simulator.py  baselines.py  cold_start_validation.py
features/: __init__.py  cart_features.py  complementarity.py  item_features.py  llm_embeddings.py  meal_semantics.py  pipeline.py  user_features.py
scripts/: _audit_scenarios.py  _run_hp_tuning.py  _run_quick_eval.py  _train_test.py  _utils.py  build_features.py  build_unified_data.py  demo_catalog.py  live_demo.py  prepare_indian_data.py  prepare_real_data.py  run_full_evaluation.py  run_offline_eval.py  simulate_serving.py  test_api.py  test_api2.py  train_ranker.py
serving/: scalability.py  simulate.py
(+62 files in other folders)
